# IMT3612-GPU

./: readme.md
data/notes/: aj_guillon_notes_opencl_general_gpu_architecture.txt  aj_guillon_notes_opencl_high_level_overview.txt  general.txt
data/projects/: CMakeLists.txt
data/projects/common/: CMakeLists.txt  pms_build_program.c  pms_cleanup_opencl.c  pms_clock.cpp  pms_common.h  pms_create_program.c  pms_device_info.c  pms_error.c  pms_get_device_id.c  pms_log.c  pms_read_kernel.c
data/projects/compiler/: CMakeLists.txt
data/projects/excercise02/: exercise02.c
data/projects/exercise02/: CMakeLists.txt  exercise02.c
data/projects/exercise04/: CMakeLists.txt  exercise04.c
data/projects/exercise05/: CMakeLists.txt  exercise05.c
data/projects/kernels/: str_lib_test.cl  string_puzzle.cl  strlen_test.cl  vec_add_3.cl  vector_addition.cl
data/projects/kernels/pms_lib/: pms_lib_allocator.h  pms_lib_memcpy.h  pms_lib_memory.h  pms_lib_strcat.h  pms_lib_strchr.h  pms_lib_strcmp.h  pms_lib_strcpy.h  pms_lib_string.h  pms_lib_strlen.h  pms_lib_strncat.h  pms_lib_strncmp.h  pms_lib_toupper.h
data/projects/kernels/pms_string_twist/: pms_string_twist.h
data/projects/lib_tests/: CMakeLists.txt
data/projects/lib_tests/kernel_puzzle_tests/: kernel_puzzle_tests.c
data/projects/lib_tests/kernel_string_tests/: kernel_string_tests.c
data/projects/lib_tests/kernel_tests/: CMakeLists.txt  kernel_tests.c
data/projects/lib_tests/puzzle_lib_tests/: CMakeLists.txt  string_test_cases.txt  string_twist_test.c
data/projects/puzzle_lib/: CMakeLists.txt  pms_string_twist.c  pms_string_twist.h
data/projects/string_puzzle/: CMakeLists.txt  string_puzzle.c
data/projects/string_tests/: CMakeLists.txt  string_tests.c
data/projects/vector_addition/: CMakeLists.txt  vector_addition.c
data/query_device/: cl_query_device.cpp  readme.txt
data/tutorials/: links.txt
data/vector_addition/kernels/: vector_addition.cl
notes/: kite_notes.txt
notes/aj_notes/: aj_guillon_notes_opencl_c.txt
notes/david_black_schaffer/: global_local_dimensions.txt  what_is_opencl.txt  what_is_opencl_good_for.txt
projects/common/: CMakeLists.txt  pms_cleanup_opencl.c  pms_clock.h  pms_create_program.c  pms_device_info.c  pms_log.c  pms_setup_opencl_cpu.c
projects/compiler/: CMakeLists.txt  compiler.c
projects/exercise02/: exercise02.c
projects/exercise04/: CMakeLists.txt
projects/exercise05/: exercise05.c
projects/kernels/: str_lib_test.cl  string_twist_test.cl  vec_add_2.cl
projects/kernels/pms_lib/: pms_lib_memcmp.h  pms_lib_memset.h  pms_lib_strcmp.h  pms_lib_strcpy.h  pms_lib_strlen.h  pms_lib_tolower.h  pms_lib_types.h
projects/kernels/pms_string_twist/: pms_string_twist.h
projects/lib_tests/: CMakeLists.txt
projects/lib_tests/kernel_puzzle_tests/: CMakeLists.txt  kernel_puzzle_tests.c
projects/lib_tests/kernel_string_tests/: CMakeLists.txt  kernel_string_tests.c
projects/query_device/: cl_query_device
projects/string_puzzle/: string_puzzle.c
tutorials/: installation_guides.txt
